--- a/netlify.toml
+++ b/netlify.toml
@@ -18,3 +18,28 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     # עדכון CSP כדי לאפשר חיבורי API ו-WS
     Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://todo-back-bfph.onrender.com wss://todo-back-bfph.onrender.com https: wss:;"
+
+# Proxy selected routes to Render
+[[redirects]]
+  from = "/auth/*"
+  to = "https://todo-back-bfph.onrender.com/auth/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/me"
+  to = "https://todo-back-bfph.onrender.com/me"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/tasks/*"
+  to = "https://todo-back-bfph.onrender.com/tasks/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/stars/*"
+  to = "https://todo-back-bfph.onrender.com/stars/:splat"
+  status = 200
+  force = true
