fix: add missing /sync endpoint redirect in netlify.toml
- Add redirect from /sync to https://todo-back-bfph.onrender.com/sync
- Fix 404 error for sync endpoint in production
- Maintain consistency with other API endpoint redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -43,3 +43,9 @@
   to = "https://todo-back-bfph.onrender.com/stars/:splat"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/sync"
+  to = "https://todo-back-bfph.onrender.com/sync"
+  status = 200
+  force = true
