fix: add missing API endpoint redirects in netlify.toml
- Add redirect for /sync endpoint to backend
- Add redirect for /me/tasks/export endpoint to backend
- Fix 404 errors for sync and export functionality in production
- Maintain consistency with existing API endpoint redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -49,3 +49,9 @@
   to = "https://todo-back-bfph.onrender.com/sync"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/me/tasks/export"
+  to = "https://todo-back-bfph.onrender.com/me/tasks/export"
+  status = 200
+  force = true
